@@ -26,7 +26,12 @@ package jdk.jpackage.internal;
 import static org.junit.Assert.assertEquals;
 import org.junit.Test;
 
-
+/*
+ * @test
+ * @modules jdk.jpackage
+ * @compile --patch-module jdk.jpackage=${test.src} --add-reads jdk.jpackage=ALL-UNNAMED --add-exports jdk.jpackage/jdk.jpackage.internal=ALL-UNNAMED EnquoterTest.java
+ * @run junit/othervm --patch-module jdk.jpackage=${test.classes} --add-reads jdk.jpackage=ALL-UNNAMED --add-exports jdk.jpackage/jdk.jpackage.internal=ALL-UNNAMED jdk.jpackage.internal.EnquoterTest
+ */
 public class EnquoterTest {
 
     @Test
