@@ -1,3 +1,4 @@
+
 /*
  * Copyright (c) 2017, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
@@ -28,10 +29,9 @@ import java.util.function.Function;
 
 /*
  * @test
- * @bug 8262891 8268333 8268896 8269802 8269808 8270151 8269113 8277864
+ * @bug 8262891 8268333 8268896 8269802 8269808 8270151 8269113 8277864 8290709
  * @summary Check behavior of pattern switches.
- * @compile --enable-preview -source ${jdk.version} Switches.java
- * @run main/othervm --enable-preview Switches
+ * @enablePreview
  */
 public class Switches {
 
@@ -47,8 +47,6 @@ public class Switches {
         assertTrue(testNullSwitch(""));
         runArrayTypeTest(this::testArrayTypeStatement);
         runArrayTypeTest(this::testArrayTypeExpression);
-        runDefaultTest(this::testDefaultDoesNotDominateStatement);
-        runDefaultTest(this::testDefaultDoesNotDominateExpression);
         runEnumTest(this::testEnumExpression1);
         runEnumTest(this::testEnumExpression2);
         runEnumTest(this::testEnumWithGuards1);
@@ -94,6 +92,19 @@ public class Switches {
         assertEquals("a", deconstructExpression(new R("a")));
         assertEquals("1", deconstructExpression(new R(1)));
         assertEquals("other", deconstructExpression(""));
+        assertEquals("a", translationTest("a"));
+        assertEquals("Rb", translationTest(new R("b")));
+        assertEquals("R2c", translationTest(new R2("c")));
+        assertEquals("other", translationTest(0));
+        assertEquals("OK", totalPatternAndNull(Integer.valueOf(42)));
+        assertEquals("OK", totalPatternAndNull(null));
+        assertEquals("1", nullAfterTotal(Integer.valueOf(42)));
+        assertEquals("OK", nullAfterTotal(null));
+        emptyFallThrough(1);
+        emptyFallThrough("");
+        emptyFallThrough(1.0);
+        testSimpleSwitch();
+        testSimpleSwitchExpression();
     }
 
     void run(Function<Object, Integer> mapper) {
@@ -222,22 +233,6 @@ public class Switches {
         };
     }
 
-    String testDefaultDoesNotDominateStatement(Object o) {
-        String res;
-        switch (o) {
-            default -> res = "default";
-            case String str -> res = "str" + str.length();
-        }
-        return res;
-    }
-
-    String testDefaultDoesNotDominateExpression(Object o) {
-        return switch (o) {
-            case default -> "default";
-            case String str -> "str" + str.length();
-        };
-    }
-
     int testStringWithConstant(String str) {
         switch (str) {
             case "A": return 1;
@@ -258,7 +253,8 @@ public class Switches {
         return switch (e) {
             case A -> "a";
             case B -> "b";
-            case null, E x -> String.valueOf(x);
+            case E x -> String.valueOf(x);
+            case null -> "null";
         };
     }
 
@@ -266,7 +262,8 @@ public class Switches {
         return switch (e) {
             case A -> "a";
             case B -> "b";
-            case E x, null -> String.valueOf(x);
+            case E x -> String.valueOf(x);
+            case null -> "null";
         };
     }
 
@@ -276,7 +273,8 @@ public class Switches {
             case B: return "b";
             case C: return String.valueOf(e);
             case E x when "A".equals(x.name()): return "broken";
-            case null, E x: return String.valueOf(x);
+            case E x: return String.valueOf(x);
+            case null: return "null";
         }
     }
 
@@ -286,7 +284,8 @@ public class Switches {
             case B -> "b";
             case C -> String.valueOf(e);
             case E x when "A".equals(x.name()) -> "broken";
-            case null, E x -> String.valueOf(x);
+            case E x -> String.valueOf(x);
+            case null -> "null";
         };
     }
 
@@ -295,7 +294,8 @@ public class Switches {
             case A: return "a";
             case B: return "b";
             case E x when "C".equals(x.name()): return "C";
-            case null, E x: return e == E.C ? "broken" : String.valueOf(x);
+            case E x: return e == E.C ? "broken" : String.valueOf(x);
+            case null: return "null";
         }
     }
 
@@ -304,7 +304,8 @@ public class Switches {
             case A -> "a";
             case B -> "b";
             case E x when "C".equals(x.name()) -> "C";
-            case null, E x -> e == E.C ? "broken" : String.valueOf(x);
+            case E x -> e == E.C ? "broken" : String.valueOf(x);
+            case null -> "null";
         };
     }
 
@@ -313,7 +314,8 @@ public class Switches {
             case A: return "a";
             case B: return "b";
             case Object x when "C".equals(x.toString()): return "C";
-            case null, E x: return e == E.C ? "broken" : String.valueOf(x);
+            case E x: return e == E.C ? "broken" : String.valueOf(x);
+            case null: return "null";
         }
     }
 
@@ -322,7 +324,8 @@ public class Switches {
             case A -> "a";
             case B -> "b";
             case Object x when "C".equals(x.toString()) -> "C";
-            case null, E x -> e == E.C ? "broken" : String.valueOf(x);
+            case E x -> e == E.C ? "broken" : String.valueOf(x);
+            case null -> "null";
         };
     }
 
@@ -331,7 +334,8 @@ public class Switches {
             case A: return "a";
             case B: return "b";
             case Runnable x when "C".equals(x.toString()): return "C";
-            case null, E x: return e == E.C ? "broken" : String.valueOf(x);
+            case E x: return e == E.C ? "broken" : String.valueOf(x);
+            case null: return "null";
         }
     }
 
@@ -340,7 +344,8 @@ public class Switches {
             case A -> "a";
             case B -> "b";
             case Runnable x when "C".equals(x.toString()) -> "C";
-            case null, E x -> e == E.C ? "broken" : String.valueOf(x);
+            case E x -> e == E.C ? "broken" : String.valueOf(x);
+            case null -> "null";
         };
     }
 
@@ -349,7 +354,8 @@ public class Switches {
             case "A": return "a";
             case Switches.ConstantClassClash: return "b";
             case String x when "C".equals(x): return "C";
-            case null, String x: return "C".equals(x) ? "broken" : String.valueOf(x);
+            case String x: return "C".equals(x) ? "broken" : String.valueOf(x);
+            case null: return "null";
         }
     }
 
@@ -358,7 +364,8 @@ public class Switches {
             case "A" -> "a";
             case ConstantClassClash -> "b";
             case String x when "C".equals(x) -> "C";
-            case null, String x -> e == E.C ? "broken" : String.valueOf(x);
+            case String x -> e == E.C ? "broken" : String.valueOf(x);
+            case null -> "null";
         };
     }
 
@@ -367,7 +374,8 @@ public class Switches {
             case 0: return "a";
             case 1: return "b";
             case Integer x when x.equals(2): return "C";
-            case null, Integer x: return Objects.equals(x, 2) ? "broken" : String.valueOf(x);
+            case Integer x: return Objects.equals(x, 2) ? "broken" : String.valueOf(x);
+            case null: return "null";
         }
     }
 
@@ -376,7 +384,8 @@ public class Switches {
             case 0 -> "a";
             case 1 -> "b";
             case Integer x when x.equals(2) -> "C";
-            case null, Integer x -> Objects.equals(x, 2) ? "broken" : String.valueOf(x);
+            case Integer x -> Objects.equals(x, 2) ? "broken" : String.valueOf(x);
+            case null -> "null";
         };
     }
 
@@ -458,21 +467,21 @@ public class Switches {
             }
         }
         switch (o) {
-            case null, Object obj:; //no break intentionally - should not fall through to any possible default
-        }
-        switch (o) {
-            case Object obj, null:; //no break intentionally - should not fall through to any possible default
+            case Object obj: int i;
+            case null:; //no break intentionally - should not fall through to any possible default
         }
     }
 
     void exhaustiveStatementSane2(I i) {
         switch (i) {
             case A a: break;
-            case null, B b:; //no break intentionally - should not fall through to any possible default
+            case B b:; //no break intentionally - should not fall through to any possible default
+            case null:;
         }
         switch (i) {
             case A a -> {}
-            case null, B b -> {}
+            case B b -> {}
+            case null -> {}
         }
     }
 
@@ -620,7 +629,7 @@ public class Switches {
     String deconstructStatement(Object o) {
         switch (o) {
             case R(String s) -> {return s;}
-            case R(Integer i) r -> {return r.o().toString();}
+            case R(Integer i) -> {return i.toString();}
             case Object x -> {return "other";}
         }
     }
@@ -628,9 +637,58 @@ public class Switches {
     String deconstructExpression(Object o) {
         return switch (o) {
             case R(String s) -> s;
-            case R(Integer i) r -> r.o().toString();
+            case R(Integer i) -> i.toString();
             case Object x -> "other";
         };
+    }
+
+    String translationTest(Object o) {
+        return switch (o) {
+            case R(String s) -> "R" + s;
+            case String s -> s;
+            case R2(String s) -> "R2" + s;
+            default -> "other";
+        };
+    }
+
+    String totalPatternAndNull(Integer in) {
+        return switch (in) {
+            case -1: { yield "";}
+            case null: { yield "OK";}
+            case Integer i: { yield "OK";}
+        };
+    }
+
+    String nullAfterTotal(Object o) {
+        return switch (o) {
+            case Object obj: { yield "1";}
+            case null: { yield "OK";}
+        };
+    }
+
+    void emptyFallThrough(Object o) {
+        switch (o) {
+            case Integer i:
+            case String s:
+            case Object obj:
+        }
+    }
+
+    void testSimpleSwitch() {
+        Object o = "";
+        int res;
+        switch (o) {
+            default -> res = 1;
+        };
+        assertEquals(1, res);
+    }
+
+    void testSimpleSwitchExpression() {
+        Object o = "";
+        int res = switch (o) {
+            default -> 1;
+        };
+        assertEquals(1, res);
     }
 
     //verify that for cases like:
@@ -674,4 +732,5 @@ public class Switches {
     }
 
     record R(Object o) {}
+    record R2(Object o) {}
 }
